# Astral-Drafter

./: .gitignore  README.md  launch_astral_drafter.bat  llama_cpp_server_bridge.py
calendar/: README.md  calendar_mcp.py  google_calendar.py  pyproject.toml  test.py  time_test.py
client_mcp/: README.md  client.py
file_system/: README.md  file_system.py  pyproject.toml
gui/: astral_nexus_drafter.html
